--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 .header  {
     font-family: monospace;
     background: papayawhip;
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1;
   }
   
   .logo {
@@ -9,11 +14,16 @@
     color: tomato;
     background: white;
     padding: 4px 32px;
+
   }
   
   ul {
     /* this removes the dots on the list items*/
     list-style-type: none;
+    display: flex;
+    gap: 8px;
+    margin: 0;
+    padding: 0;
   }
   
   a {
